Fix hardcoded CMake documentation tooltip background color

(commit message authored by Igor Kushnir)

Since the "Apply color scheme to code browser tooltip" merge request
https://invent.kde.org/kdevelop/kdevelop/-/merge_requests/370
CMake documentation tooltips contain white text on white background when
a dark Window Color Scheme is configured and when there is no rst2html
executable in PATH.

This commit effectively reverts a 12-year-old fix for black-on-black
CMake documentation tooltips 8153365a142a9d0997c49e78a831fafc64eb36a5.

I have tested reverting the !370 merge request's commits and a tiny
follow-up commit like this:
  git revert 258c2b70a39ccfc8788e85c2abaaa0628c9f8e81
  git revert -n d30fed992438e5cdbd917d7f67a4cd449c40622c^..9ae6ac2bcffa414b358b9a09a320788cc9a64231
After this reversion, the CMake documentation tooltips always contain
black text on white background, regardless of Window Color Scheme
configuration and whether or not rst2html is available. When the color
scheme merge request is reverted, applying this commit doesn't make a
difference, so I cannot reproduce the bug fixed by
8153365a142a9d0997c49e78a831fafc64eb36a5 in any case.

BUG: 469180
FIXED-IN: 5.12.230800