plugins/cmake/cmakecommandscontents.cpp
@@ -98,7 +98,7 @@ QString CMakeCommandsContents::descriptionForIdentifier(const QString& id, CMake
 
         const QString rst2html = QStandardPaths::findExecutable(QStringLiteral("rst2html"));
         if (rst2html.isEmpty()) {
-            desc = (QLatin1String("<html><body style='background:#fff'><pre><code>") + desc.toHtmlEscaped() + QLatin1String("</code></pre>")
+            desc = (QLatin1String("<html><body><pre><code>") + desc.toHtmlEscaped() + QLatin1String("</code></pre>")
                 + i18n("<p>For better CMake documentation rendering, install rst2html.</p>")
                 + QLatin1String("</body></html>"));
         } else {
